--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "web-dev-server"
   },
   "dependencies": {
+    "@lrnwebcomponents/date-card": "^4.0.6",
     "lit": "^2.1.1"
   },
   "devDependencies": {
